# backend/src/generated/java/com/kodeboxx/smartintake/generated/contract/SafeAccountIdentity.java
@@ -1,0 +1,168 @@
+/*
+ * Smart Form Builder Lite API
+ * Normative M2 operation contract; entries marked contract-published do not claim runtime implementation.
+ *
+ * The version of the OpenAPI document: 4.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.kodeboxx.smartintake.generated.contract;
+
+import java.util.Objects;
+import java.util.Arrays;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+
+/**
+ * Safe staff identity; it excludes passwords, hashes, bearer credentials and session secrets.
+ */
+@JsonPropertyOrder({
+  SafeAccountIdentity.JSON_PROPERTY_ACCOUNT_ID,
+  SafeAccountIdentity.JSON_PROPERTY_USERNAME,
+  SafeAccountIdentity.JSON_PROPERTY_DISPLAY_NAME
+})
+@jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", comments = "Generator version: 7.10.0")
+public class SafeAccountIdentity {
+  public static final String JSON_PROPERTY_ACCOUNT_ID = "accountId";
+  @jakarta.annotation.Nonnull
+  private String accountId;
+
+  public static final String JSON_PROPERTY_USERNAME = "username";
+  @jakarta.annotation.Nonnull
+  private String username;
+
+  public static final String JSON_PROPERTY_DISPLAY_NAME = "displayName";
+  @jakarta.annotation.Nonnull
+  private String displayName;
+
+  public SafeAccountIdentity() {
+  }
+
+  public SafeAccountIdentity accountId(@jakarta.annotation.Nonnull String accountId) {
+    
+    this.accountId = accountId;
+    return this;
+  }
+
+  /**
+   * Get accountId
+   * @return accountId
+   */
+  @jakarta.annotation.Nonnull
+  @JsonProperty(JSON_PROPERTY_ACCOUNT_ID)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public String getAccountId() {
+    return accountId;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_ACCOUNT_ID)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setAccountId(@jakarta.annotation.Nonnull String accountId) {
+    this.accountId = accountId;
+  }
+
+  public SafeAccountIdentity username(@jakarta.annotation.Nonnull String username) {
+    
+    this.username = username;
+    return this;
+  }
+
+  /**
+   * Get username
+   * @return username
+   */
+  @jakarta.annotation.Nonnull
+  @JsonProperty(JSON_PROPERTY_USERNAME)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public String getUsername() {
+    return username;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_USERNAME)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setUsername(@jakarta.annotation.Nonnull String username) {
+    this.username = username;
+  }
+
+  public SafeAccountIdentity displayName(@jakarta.annotation.Nonnull String displayName) {
+    
+    this.displayName = displayName;
+    return this;
+  }
+
+  /**
+   * Get displayName
+   * @return displayName
+   */
+  @jakarta.annotation.Nonnull
+  @JsonProperty(JSON_PROPERTY_DISPLAY_NAME)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public String getDisplayName() {
+    return displayName;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_DISPLAY_NAME)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setDisplayName(@jakarta.annotation.Nonnull String displayName) {
+    this.displayName = displayName;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    SafeAccountIdentity safeAccountIdentity = (SafeAccountIdentity) o;
+    return Objects.equals(this.accountId, safeAccountIdentity.accountId) &&
+        Objects.equals(this.username, safeAccountIdentity.username) &&
+        Objects.equals(this.displayName, safeAccountIdentity.displayName);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(accountId, username, displayName);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class SafeAccountIdentity {\n");
+    sb.append("    accountId: ").append(toIndentedString(accountId)).append("\n");
+    sb.append("    username: ").append(toIndentedString(username)).append("\n");
+    sb.append("    displayName: ").append(toIndentedString(displayName)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
